--- a/materiallogindemo-master/app/src/main/AndroidManifest.xml
+++ b/materiallogindemo-master/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".SignupActivity" />
+        <activity android:name=".ShowReservations" />
         <activity android:name=".DetailActivity" />
         <activity android:name=".Property" />
         <activity android:name=".ZonesList" />
