--- a/materiallogindemo-master/app/src/main/AndroidManifest.xml
+++ b/materiallogindemo-master/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".ShowReservations" />
@@ -18,16 +17,15 @@
         <activity android:name=".Property" />
         <activity android:name=".ZonesList" />
         <activity android:name=".Choices" />
-        <activity android:name=".First" >
-
+        <activity android:name=".First">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Choices2"></activity>
+        <activity android:name=".Choices2" />
+        <activity android:name=".Check_availability"></activity>
     </application>
 
 </manifest>
