--- a/materiallogindemo-master/app/build.gradle
+++ b/materiallogindemo-master/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:1.2.6'
+    implementation'com.github.markushi:circlebutton:1.1'
 }
 
 
