--- a/materiallogindemo-master/app/src/main/AndroidManifest.xml
+++ b/materiallogindemo-master/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         </activity>
         <activity android:name=".Choices2" />
         <activity android:name=".Check_availability" />
-        <activity android:name=".ZoneList2"></activity>
+        <activity android:name=".ZoneList2" />
+        <activity android:name=".CarCare"></activity>
     </application>
 
 </manifest>
