--- a/materiallogindemo-master/build.gradle
+++ b/materiallogindemo-master/build.gradle
@@ -16,5 +16,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {url "https://jitpack.io"}
+        mavenCentral()
+        mavenLocal()
     }
 }
