--- a/materiallogindemo-master/app/src/main/AndroidManifest.xml
+++ b/materiallogindemo-master/app/src/main/AndroidManifest.xml
@@ -9,21 +9,27 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
+            android:parentActivityName=".First"
             android:label="Sign in" />
         <activity
             android:name=".MainActivity"
+            android:parentActivityName=".ZonesList"
             android:label="Reserve a Parking" />
         <activity
             android:name=".SignupActivity"
+            android:parentActivityName=".LoginActivity"
             android:label="Sign up" />
         <activity
             android:name=".ShowReservations"
+            android:parentActivityName=".Choices"
             android:label="My Reservations" />
         <activity
             android:name=".ZonesList"
+            android:parentActivityName=".Choices"
             android:label="Select a Zone" />
         <activity
             android:name=".Choices"
+            android:parentActivityName=".First"
             android:label="Select a Service" />
         <activity android:name=".First" />
         <activity
@@ -37,20 +43,26 @@
         </activity>
         <activity
             android:name=".Choices2"
+            android:parentActivityName=".First"
             android:label="Select a Service "></activity>
         <activity
             android:name=".Check_availability"
+            android:parentActivityName=".ZonesList"
             android:label="Map" />
         <activity
             android:name=".ZoneList2"
+            android:parentActivityName=".Choices"
             android:label="Select a Zone" />
         <activity
             android:name=".CarCare"
+            android:parentActivityName=".Choices"
             android:label="Request Car Care" />
         <activity
             android:name=".AboutParQU"
+            android:parentActivityName=".First"
             android:label="About ParQu"></activity>
         <activity android:name=".ContactUs"
+            android:parentActivityName=".First"
             android:label="Contact Us"></activity>
     </application>
 
