--- a/materiallogindemo-master/app/src/main/AndroidManifest.xml
+++ b/materiallogindemo-master/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sourcey.materiallogindemo">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,28 +19,28 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:parentActivityName=".First"
-            android:label="Sign in" />
+            android:label="Sign in"
+            android:parentActivityName=".First" />
         <activity
             android:name=".MainActivity"
-            android:parentActivityName=".ZonesList"
-            android:label="Reserve a Parking" />
+            android:label="Reserve a Parking"
+            android:parentActivityName=".ZonesList" />
         <activity
             android:name=".SignupActivity"
-            android:parentActivityName=".LoginActivity"
-            android:label="Sign up" />
+            android:label="Sign up"
+            android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".ShowReservations"
-            android:parentActivityName=".Choices"
-            android:label="My Reservations" />
+            android:label="My Reservations"
+            android:parentActivityName=".Choices" />
         <activity
             android:name=".ZonesList"
-            android:parentActivityName=".Choices"
-            android:label="Select a Zone" />
+            android:label="Select a Zone"
+            android:parentActivityName=".Choices" />
         <activity
             android:name=".Choices"
-            android:parentActivityName=".First"
-            android:label="Select a Service" />
+            android:label="Select a Service"
+            android:parentActivityName=".First" />
         <activity android:name=".First" />
         <activity
             android:name=".SplashActivity"
@@ -43,27 +53,42 @@
         </activity>
         <activity
             android:name=".Choices2"
-            android:parentActivityName=".First"
-            android:label="Select a Service "></activity>
+            android:label="Select a Service "
+            android:parentActivityName=".First" />
         <activity
             android:name=".Check_availability"
-            android:parentActivityName=".ZonesList"
-            android:label="Map" />
+            android:label="Map"
+            android:parentActivityName=".ZonesList" />
         <activity
             android:name=".ZoneList2"
-            android:parentActivityName=".Choices"
-            android:label="Select a Zone" />
+            android:label="Select a Zone"
+            android:parentActivityName=".Choices" />
         <activity
             android:name=".CarCare"
-            android:parentActivityName=".Choices"
-            android:label="Request Car Care" />
+            android:label="Request Car Care"
+            android:parentActivityName=".Choices" />
         <activity
             android:name=".AboutParQU"
-            android:parentActivityName=".First"
-            android:label="About ParQu"></activity>
-        <activity android:name=".ContactUs"
-            android:parentActivityName=".First"
-            android:label="Contact Us"></activity>
+            android:label="About ParQu"
+            android:parentActivityName=".First" />
+        <activity
+            android:name=".ContactUs"
+            android:label="Contact Us"
+            android:parentActivityName=".First" />
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDXg_vw3rHfm8doZ8kLuYwDbZqcNCSmFeU" />
+
+        <activity android:name=".MapActivity"></activity>
     </application>
 
 </manifest>
