--- a/materiallogindemo-master/app/build.gradle
+++ b/materiallogindemo-master/app/build.gradle
@@ -4,12 +4,15 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
+
     defaultConfig {
         applicationId "com.sourcey.materialloginexample"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -24,12 +27,17 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
-    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.github.chrisbanes:PhotoView:1.2.6'
     implementation 'com.github.markushi:circlebutton:1.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+
+
 }
 
 
