--- a/materiallogindemo-master/build.gradle
+++ b/materiallogindemo-master/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         classpath 'com.google.gms:google-services:3.2.0'
+
+
     }
 }
 
@@ -19,5 +21,8 @@ allprojects {
         maven {url "https://jitpack.io"}
         mavenCentral()
         mavenLocal()
+        maven{
+            url "https://maven.google.com/"
+        }
     }
 }
