--- a/materiallogindemo-master/app/build.gradle
+++ b/materiallogindemo-master/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.sourcey.materialloginexample"
-        minSdkVersion 15
+        minSdkVersion 20
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -21,9 +21,14 @@ android {
         }
     }
 }
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.14.1'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -35,6 +40,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:1.2.6'
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 
 
 }
