--- a/materiallogindemo-master/app/build.gradle
+++ b/materiallogindemo-master/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
 
     }
     buildTypes {
@@ -41,6 +42,7 @@ dependencies {
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    testImplementation 'junit:junit:4.12'
 
 
 }
